Bugfix Select All Button Slightly Too Large on Mobile
The select all button on mobile was slightly too big due to a top margin
on the input element which caused the element to extend in height
slightly.

Positioning has also been added to fix some vertical alignment of the
input element within the label element as the alignment was slightly off
on both larger and smaller screen sizes.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -430,6 +430,18 @@ td.keys {
   padding: 6px 10px;
 }
 
+.select-all input {
+  margin-top: 0;
+  position: relative;
+  top: -1px;
+}
+
+@media (max-width: $screen-xs-max) {
+  .select-all input {
+    top: 2px;
+  }
+}
+
 @keyframes spin {
   to { transform: rotate(1turn); }
 }
